--- a/RecursiveParsing/CMakeLists.txt
+++ b/RecursiveParsing/CMakeLists.txt
@@ -6,14 +6,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 set(SOURCE_FILES main.cpp lexicalAnalyzer.cpp lexicalAnalyzer.h parser.cpp parser.h)
 
+find_library(GRAPHVISLIBS NAMES libcgraph.so.6.0.0 libgvc.so.6.0.0 libcdt.so.5.0.0)
+
 add_executable(2lab ${SOURCE_FILES})
 
-add_library(gvc SHARED IMPORTED)
-set_property(TARGET gvc PROPERTY
-                        IMPORTED_LOCATION /usr/lib/libgvc.so.6.0.0)
 
-
-
-
-
-target_link_libraries(${TARGET} 2lab)
+target_link_libraries(${TARGET} 2lab ${GRAPHVISLIBS} gvc cgraph cdt)
